--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
 						-->
 						<footer>
 							<ul class="icons">
-								<li><a href="#" class="fa-twitter">Twitter</a></li>
-								<li><a href="#" class="fa-instagram">Instagram</a></li>
-								<li><a href="#" class="fa-facebook">Facebook</a></li>
+								<li>
+								<a target="_blank" href="http://codepen.io/NarwhalNatt" class="fa-codepen">
+								codepen</a></li>
+								<li><a href="http://sealandersonE.github.io" class="fa-bluetooth-b">Instagram</a></li>
+								<li><a href="#" class="fa-snapchat">Facebook</a></li>
 							</ul>
 						</footer>
 					</section>
